Voy a subir todos los html y los css de la primera 1 entrega y 2 entega ya que e hecho alguna modificación en la primera entrega

--- a/html/MaximoGoleadoresPremier.html
+++ b/html/MaximoGoleadoresPremier.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futbol2SMR - Máximos Goleadores</title>
-    <link rel="stylesheet" href="MaximoGoleadores.css">
+    <link rel="stylesheet" href="MaximoGoleadoresPremier.css">
 </head>
 <body>
 
     <header class="header">
-        <img src="LaLiga.png" alt="Logo La Liga" class="logo">
-        <h1>Premier</h1>
+        <img src="Premier.png" alt="Logo La Liga" class="logo">
+        <h1>Premier League</h1>
         <h2>Máximos Goleadores</h2>
     </header>
 
@@ -28,38 +28,38 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Kylian Mbappé</td>
-                    <td>Real Madrid CF</td>
+                    <td>Earling Haaland</td>
+                    <td>Manchester City</td>
                     <td>22</td>
-                    <td>21</td>
+                    <td>26</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Vedat Muriqi</td>
-                    <td>Mallorca CF</td>
-                    <td>15</td>
-                    <td>21</td>
+                    <td>Igor Thiago</td>
+                    <td>Brentford</td>
+                    <td>17</td>
+                    <td>25</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Ferran Torres</td>
-                    <td>FC Barcelona</td>
-                    <td>12</td>
-                    <td>20</td>
+                    <td>Antoine Semenyo</td>
+                    <td>Manchester City</td>
+                    <td>13</td>
+                    <td>27</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Ante Budimir</td>
-                    <td>Osasuna</td>
-                    <td>11</td>
-                    <td>20</td>
+                    <td>Joao Pedro</td>
+                    <td>Chealsea</td>
+                    <td>10</td>
+                    <td>26</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Robert Lewandowski</td>
-                    <td>FC Barcelona</td>
+                    <td>Calvert-Lewin</td>
+                    <td>Leeds United</td>
                     <td>10</td>
-                    <td>19</td>
+                    <td>23</td>
                 </tr>
             </tbody>
         </table>
